Fixed a bug where the icons were off center on the grid

--- a/src/Components/Grid/Grid.css
+++ b/src/Components/Grid/Grid.css
@@ -32,23 +32,21 @@
 
 .grid__cell-content.is-hovered .grid__cell-icon {
   margin-right: 1em;
-  max-width: 10em;
 }
 
 .grid__cell-content.is-hovered .grid__cell-label {
   opacity: 1;
-  width: 100%;
+  max-width: 10em;
 }
 
 .grid__cell-icon {
   margin: 0;
-  max-width: 0em;
   transition: all 500ms ease;
 }
 
 .grid__cell-label {
   margin-top: .5em;
-  width: 0%;
+  max-width: 0em;
   opacity: 0;
   transition: all 500ms ease;
 }
